final diseño destok

--- a/index.html
+++ b/index.html
@@ -140,9 +140,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="contact__form">
+                        <h2>Envíame un mensaje</h2>
+                        <form action="">
+                            <div class="row">
+                                <label for="name">Nombre: </label>
+                                <input type="text" name="name" id="" placeholder="Escribe tu nomnbre">
+                            </div>
+                            <div class="row">
+                                <label for="email">Email: </label>
+                                <input type="email" name="email" placeholder="ejemplo@email.com">
+                            </div>
+                            <div class="row">
+                                <label for="msg">Escribe un mensaje: </label>
+                                <textarea name="msg" id="" cols="30" rows="5" placeholder="Escribe tu mensaje aquí."></textarea>
+                            </div>
+                            <div class="but">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <p>&#169 Todos los derechos reservados || Jesús Inchicaque</p>
+        </footer>
 		<script src="js/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
 	</body>
