mejora de diseño responsive

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg fixed-top">
+			<nav class="navbar navbar-expand-md fixed-top">
 				<div class="container-fluid">
 					<a class="navbar-brand" href="#"></a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
+						<i class="fa-solid fa-bars"></i>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNavDropdown">
 						<ul class="navbar-nav">
@@ -43,7 +43,7 @@
 				</div>
 			</nav>
 		</header>
-        <main>
+        <main class="main">
             <section class="banner">
                 <div class="banner__content">
                     <h1 class="banner__title">Jesús Inchicaque</h1>
@@ -56,47 +56,45 @@
                 </figure>
             </section>
             <section class="hab">
-                <div class="container hab__container">
+                <div class="container-md hab__container">
                     <div class="hab__content">
                         <h2>Habilidades</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea iusto officia debitis, ex harum vel nostrum a blanditiis eveniet velit nemo, maiores fugiat id rem eos quas. Voluptatem, fuga mollitia.</p>
                     </div>
-                    <div class="hab__cards">
-                        <ul>
-                            <li class="brand-1" data-title="HTML 5">
-                                <i class="fa-brands fa-html5"></i>
-                                <span>HTML 5</span>
-                            </li>
-                            <li class="brand-2" data-title="CSS 3">
-                                <i class="fa-brands fa-css3"></i>
-                                <span>CSS 3</span>
-                            </li>
-                            <li class="brand-3" data-title="Sass">
-                                <i class="fa-brands fa-sass"></i>
-                                <span>Sass</span>
-                            </li>
-                            <li class="brand-4" data-title="JavaScript">
-                                <i class="fa-brands fa-js"></i>
-                                <span>JavaScript</span>
-                            </li>
-                            <li class="brand-5" data-title="GitHub">
-                                <i class="fa-brands fa-github"></i>
-                                <span>GitHub</span>
-                            </li>
-                            <li class="brand-6" data-title="React JS">
-                                <i class="fa-brands fa-react"></i>
-                                <span>React JS</span>
-                            </li>
-                            <li class="brand-7" data-title="Node JS">
-                                <i class="fa-brands fa-node"></i>
-                                <span>Node JS</span>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="hab__cards">
+                        <li class="brand-1" data-title="HTML 5">
+                            <i class="fa-brands fa-html5"></i>
+                            <span>HTML 5</span>
+                        </li>
+                        <li class="brand-2" data-title="CSS 3">
+                            <i class="fa-brands fa-css3"></i>
+                            <span>CSS 3</span>
+                        </li>
+                        <li class="brand-3" data-title="Sass">
+                            <i class="fa-brands fa-sass"></i>
+                            <span>Sass</span>
+                        </li>
+                        <li class="brand-4" data-title="JavaScript">
+                            <i class="fa-brands fa-js"></i>
+                            <span>JavaScript</span>
+                        </li>
+                        <li class="brand-5" data-title="GitHub">
+                            <i class="fa-brands fa-github"></i>
+                            <span>GitHub</span>
+                        </li>
+                        <li class="brand-6" data-title="React JS">
+                            <i class="fa-brands fa-react"></i>
+                            <span>React JS</span>
+                        </li>
+                        <li class="brand-7" data-title="Node JS">
+                            <i class="fa-brands fa-node"></i>
+                            <span>Node JS</span>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="proyects">
-                <div class="container proyects__container">
+                <div class="container-md proyects__container">
                     <h2>Proyectos</h2>
                     <div class="proyects__card">
                         <div class="proyects__content">
@@ -115,7 +113,7 @@
                 </div>
             </section>
             <section class="contact">
-                <div class="container contact__container">
+                <div class="container-md contact__container">
                     <h2>Contáctame</h2>
                     <div class="contact__sec">
                         <div class="contact__card">
@@ -164,7 +162,8 @@
             </section>
         </main>
         <footer class="footer">
-            <p>&#169 Todos los derechos reservados || Jesús Inchicaque</p>
+            <p class="top">&#169 Todos los derechos reservados</p>
+            <p class="name">Jesús Inchicaque</p>
         </footer>
 		<script src="js/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
