reparación animacion banner

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <main class="main">
             <section class="banner">
                 <div class="banner__content">
-                    <h1 class="banner__title">Jesús Inchicaque</h1>
+                    <h1 class="banner__title">Jesús Inchicaque.</h1>
                     <p class="banner__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat commodi dolore fugit labore recusandae, nam eaque amet nobis enim facilis autem eligendi excepturi laudantium nulla consequuntur. Quaerat vitae pariatur nostrum.
                     At nam laboriosam molestiae culpa quibusdam, vitae repellendus quaerat, necessitatibus, placeat quam soluta aut in incidunt reprehenderit asperiores fugiat ipsum labore veritatis dignissimos voluptatum ab? Tempore omnis officiis nobis expedita?
                     In ex soluta, inventore odit quaerat facere saepe, tempora optio accusamus molestias ipsam. Harum facere accusamus quibusdam, ratione consectetur id nam officia fuga beatae impedit facilis architecto quam molestias aperiam.</p>
