--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Portafolio personal de Jesús Inchicaque">
+        <meta name="author" content="Jesús Inchicaque">
 		<title>Jesús Ale || Portafolio</title>
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -120,22 +122,22 @@
                             <div class="contact__content">
                                 <i class="fa-brands fa-twitter"></i>
                                 <h3>Twitter</h3>
-                                <a href="https://twitter.com/Jesus_Ale93" target="_blank">@Jesus_Ale93</a>
                             </div>
+                            <a href="https://twitter.com/Jesus_Ale93" target="_blank">@Jesus_Ale93</a>
                         </div>
                         <div class="contact__card">
                             <div class="contact__content">
                                 <i class="fa-brands fa-github"></i>
                                 <h3>Github</h3>
-                                <a href="https://github.com/jesus9314" target="_blank">jesus9314</a>
                             </div>
+                            <a href="https://github.com/jesus9314" target="_blank">jesus9314</a>
                         </div>
                         <div class="contact__card">
                             <div class="contact__content">
                                 <i class="fa-brands fa-linkedin"></i>
                                 <h3>Linkedin</h3>
-                                <a href="https://www.linkedin.com/in/jale9314/" target="_blank">jale9314</a>
                             </div>
+                            <a href="https://www.linkedin.com/in/jale9314/" target="_blank">jale9314</a>
                         </div>
                     </div>
                     <div class="contact__form">
